--- a/index.html
+++ b/index.html
@@ -1,23 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mini Hackathon</title>
-    <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <h1>hello world</h1>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 
-    <script
-      src="https://kit.fontawesome.com/b9f2cc7298.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+    <link rel="stylesheet" href="./utility.css">
+
+         <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> -->
+
+         <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
+</head>
+<body>
+    <header>
+        <div class="navbar-flex">
+            <div>
+        <nav>
+            <span class="bar-icon"><i class="fa-solid fa-bars"></i></span></div>
+            <div class="burgerking-img">
+            <img  src="https://www.shutterstock.com/image-vector/logo-famous-identity-city-style-600nw-2275679435.jpg" width="7%" alt="image"></div>
+            <div ><button class="signIn-button">Sign up / Sign in</button></div>
+           <div> <button class="rate-list"> <i class="fa-solid fa-cart-shopping"></i> $ 0.00</button></div>
+        </nav>
+    </div>
+    </header>
+
+    <div class="locationIcon">
+        <i class="fa-solid fa-location-dot"></i> <b>For availability</b>
+        Choose location
+    </div>
+      
+<div>
+</div>
+
+</div>
+
+    <img src="https://cdn.sanity.io/images/czqk28jt/prod_bk_us/b5984bead760d0046d44a327c34f7da9a9e68437-1600x900.jpg?w=900&q=90&fit=max&auto=format" width="100%" alt="image">
+
+  <div>
+    <div><div><div class="card" style="width: 18rem;">
+      <img src="https://cdn.sanity.io/images/czqk28jt/prod_bk_us/4cd4a736fab4faf00146cd9d7de109d61f2019a0-2000x1000.png?w=675&q=80&fit=max&auto=format" class="card-img-top" alt="image">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div></div>
+  </div>
+
+
+ 
+   
+
+
+
+
+
+
+
+
+    <script src="https://kit.fontawesome.com/ee4e947dca.js" crossorigin="anonymous"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
